<resources>
    <string name="app_name">CryptoAnalytic</string>

    <string name="cryptocurrencies">Cryptocurrencies</string>
    <string name="favorites">Favorites</string>
    <string name="notifications">Notifications</string>
    <string name="launchpads">Launchpads</string>
    <string name="news">News</string>
    <string name="search">Search</string>
    <string name="about_app">About App</string>
    <string name="calculator">Calculator</string>
    <string name="navigation_header_description">Navigation header</string>
    <string name="navigation_header_subtitle">Look forward. Predict. Win</string>
    <string name="market_cap">Market Cap:</string>
    <string name="available_supply">Available supply:</string>
    <string name="volume_24h">Volume 24h:</string>
    <string name="total_supply">Total supply:</string>
    <string name="explorers">Explorers:</string>
    <string name="website">Website:</string>

    <string name="notification_parameters">Notification Parameters</string>
    <string name="less_than">Less than</string>
    <string name="more_than">More than</string>
    <string name="increased_by">Increased by</string>
    <string name="decreased_by">Decreased by</string>
    <string name="changed_by">Changed by</string>
    <string name="alert_frequency">Alert frequency</string>
    <string name="persistence">Persistence</string>
    <string name="note">Note</string>
    <string name="your_note">Your note</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="cryptocurrency">Cryptocurrency</string>

    <string name="usd">USD</string>


    <string name="no_chart_data_string">No Chart Data :(</string>
    <string name="quarter_hour">15m</string>
    <string name="hour">1h</string>
    <string name="oneDay">1d</string>
    <string name="threeDay">3d</string>
    <string name="Week">7d</string>
    <string name="Month">1mth</string>
    <string name="threeMonth">3mth</string>
    <string name="Year">1y</string>
    <string name="All">All</string>
    <string name="AllTime">All Time</string>


    <!--String formatting-->
    <string name="double_one_sign">%.1f</string>
    <string name="double_two_signs">%.2f</string>
    <string name="double_three_signs">%.3f</string>
    <string name="double_four_signs">%.4f</string>
    <string name="double_five_signs">%.5f</string>

    <!--Currency-->
    <string name="currency_dollar">$</string>


    <!--Spinners-->
    <string-array name="alert_spinner_frequency_items">
        <item>1 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>1 hr</item>
        <item>2 hr</item>
        <item>5 hr</item>
        <item>12 hr</item>
        <item>16 hr</item>
        <item>24 hr</item>
    </string-array>
</resources>