<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/favorites"
        android:icon="@drawable/ic_baseline_star_24"
        android:title="@string/favorites" />

    <item
        android:id="@+id/cryptocurrency"
        android:icon="@drawable/ic_baseline_view_list_24"
        android:title="@string/cryptocurrencies" />

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_baseline_notifications_active_24"
        android:title="@string/notifications" />

    <item
        android:id="@+id/news"
        android:icon="@drawable/ic_news_24"
        android:title="@string/news" />

    <item
        android:id="@+id/launchpads"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:title="@string/launchpads" />
</menu>